force-app/main/default/objects/CustomObject_JU_shintou__c/CustomObject_JU_shintou__c.object-meta.xml
<CustomObject>
    <label>住環境浸透確認用</label>
    <nameField>
        <label>住環境浸透確認用名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>