force-app/main/default/objects/CustomObject_JU_shintou__c/fields/dashboardname__c.field-meta.xml
<CustomField>
    <fullName>dashboardname__c</fullName>
    <label>ダッシュボード名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>