force-app/main/default/objects/CustomObject_JU_shintou__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>得意先担当者</label>
    <length>200</length>
    <type>Text</type>
</CustomField>