force-app/main/default/objects/CustomObject_JU_shintou__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>内容</label>
    <length>200</length>
    <type>Text</type>
</CustomField>