force-app/main/default/objects/CustomObject_JU_shintou__c/fields/hiduke__c.field-meta.xml
<CustomField>
    <fullName>hiduke__c</fullName>
    <label>日付</label>
    <type>Date</type>
</CustomField>