force-app/main/default/objects/CustomObject_JU_shintou__c/fields/jikkoubi__c.field-meta.xml
<CustomField>
    <fullName>jikkoubi__c</fullName>
    <label>実行日</label>
    <type>Date</type>
</CustomField>