force-app/main/default/objects/CustomObject_JU_shintou__c/fields/kigenkgirekensu__c.field-meta.xml
<CustomField>
    <fullName>kigenkgirekensu__c</fullName>
    <label>期限切れ件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>