force-app/main/default/objects/CustomObject_JU_shintou__c/fields/oppid__c.field-meta.xml
<CustomField>
    <fullName>oppid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>住環境浸透確認用</relationshipLabel>
    <relationshipName>oppid</relationshipName>
    <type>Lookup</type>
</CustomField>