force-app/main/default/objects/CustomObject_JU_shintou__c/fields/oppname__c.field-meta.xml
<CustomField>
    <fullName>oppname__c</fullName>
    <label>商談名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>