force-app/main/default/objects/CustomObject_JU_shintou__c/fields/oppowner__c.field-meta.xml
<CustomField>
    <fullName>oppowner__c</fullName>
    <label>商談所有者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>