force-app/main/default/objects/CustomObject_JU_shintou__c/fields/recordkensu__c.field-meta.xml
<CustomField>
    <fullName>recordkensu__c</fullName>
    <label>レコード件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>