force-app/main/default/objects/CustomObject_JU_shintou__c/fields/reportname1__c.field-meta.xml
<CustomField>
    <fullName>reportname1__c</fullName>
    <label>レポート名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>