force-app/main/default/objects/CustomObject_JU_shintou__c/fields/reportname__c.field-meta.xml
<CustomField>
    <fullName>reportname__c</fullName>
    <label>参照レポート名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>