force-app/main/default/objects/CustomObject_JU_shintou__c/fields/saisyukatsudoubi__c.field-meta.xml
<CustomField>
    <fullName>saisyukatsudoubi__c</fullName>
    <label>最終活動日</label>
    <type>Date</type>
</CustomField>