force-app/main/default/objects/CustomObject_JU_shintou__c/fields/sakuseibi__c.field-meta.xml
<CustomField>
    <fullName>sakuseibi__c</fullName>
    <label>作成日</label>
    <type>Date</type>
</CustomField>