force-app/main/default/objects/CustomObject_JU_shintou__c/fields/tantoubusyo__c.field-meta.xml
<CustomField>
    <fullName>tantoubusyo__c</fullName>
    <label>担当部署</label>
    <length>100</length>
    <type>Text</type>
</CustomField>