force-app/main/default/objects/CustomObject_JU_shintou__c/fields/tokuisakiid__c.field-meta.xml
<CustomField>
    <fullName>tokuisakiid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境浸透確認用</relationshipLabel>
    <relationshipName>tokuisakiid1</relationshipName>
    <type>Lookup</type>
</CustomField>