force-app/main/default/objects/CustomObject_JU_shintou__c/fields/wariatesaki__c.field-meta.xml
<CustomField>
    <fullName>wariatesaki__c</fullName>
    <label>割り当て先</label>
    <length>100</length>
    <type>Text</type>
</CustomField>